fixed standalone build and debugging image magick plugin